--- a/fraction_object.ipynb
+++ b/fraction_object.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOn2ydqm15V4Nn2b1R/7E2J",
+      "authorship_tag": "ABX9TyMG2SLVgzbt0BM9cWfXn8tq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,22 @@
         "id": "6-5BJrHQK145"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class Fraction():\n",
+        "  def __init__(self, numerator, denominator):\n",
+        "    self.numerator = numerator\n",
+        "    self.denominator = denominator\n",
+        "\n",
+        "  def print_as_fraction(self):\n",
+        "    print('{}/{}'.format(self.numerator, self.denominator))\n",
+        "\n",
+        "  def print_as_decimal(self):\n",
+        "    print(self.numerator/self.denominator)\n",
+        "\n",
+        "three_quarters = Fraction(3, 4)\n",
+        "three_quarters.print_as_fraction()\n",
+        "three_quarters.print_as_decimal()"
+      ]
     }
   ]
 }
