--- a/degree_of_mixing.ipynb
+++ b/degree_of_mixing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGTVVNMsxVxvdAAACcaVCi",
+      "authorship_tag": "ABX9TyMkG/0JRIyAPUBb9PBblr6l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,17 +30,17 @@
       "cell_type": "markdown",
       "source": [
         "# Quantifying the Mixing of Outcomes\n",
-        "Decision trees split examples so that the outcomes are as uniform as possible within each group. Different decision tree algorithms minimize different measures of non-uniformity, including Gini impurity and information-theoretic entropy. Let's take a closer look at the latter. \n",
+        "Decision trees split examples so that the outcomes are as uniform as possible within each group. Different decision tree algorithms minimize different measures of non-uniformity, including Gini impurity and information-theoretic entropy. Let's take a closer look at the latter.\n",
         "\n",
         "Entropy is the degree of uncertainty in a variable (e.g. the decision to walk or not). This kind of entropy is related to but distinct from thermodynamic “entropy”, which is the degree of disorder in a system. Information-theoretic entropy is highest when different outcomes are equally likely, and zero when the outcome is certain. A unit of entropy is called a “bit”. A fair coin toss that has not yet occurred has one bit of entropy, and its outcome has one bit of information.\n",
         "\n",
-        "To calculate information entropy:\n",
-        "1.\tList the probabilities of different outcomes. For example, in a coin toss, the probabilities of heads and tails are both 0.5. We could write this fact as $P_H=P_T=0.5$. \n",
-        "2.\tCalculate the base-2 logarithm of each probability, i.e. $\\log_2P$. The base-2 logarithm of a number is the exponent of 2 that produces that number. $2^{-1}=0.5$, so the $\\log_20.5=-1$. A probability of 1 (the highest possible) has a logarithm of 0. Lower probabilities have negative logarithms. \n",
-        "3.\tThe entropy is the negative of the sum of each probability times its base-2 logarithm. For a coin toss, this is $E = -(P_H\\log_2P_H + P_T\\log_2P_T) = -(0.5\\times -1 + 0.5 \\times -1) = 1$. \n",
-        "4.\tTo calculate the overall entropy when we split the examples into two groups, we must add up the entropy for each group multiplied by the probability that an example falls into the group. \n",
+        "To calculate entropy:\n",
+        "1.\tList the probabilities of different outcomes. For example, in a coin toss, the probabilities of heads and tails are both 0.5. We could write this fact as $P_H=P_T=0.5$.\n",
+        "2.\tCalculate the base-2 logarithm of each probability, i.e. $\\log_2P$. The base-2 logarithm of a number is the exponent of 2 that produces that number. $2^{-1}=0.5$, so the $\\log_20.5=-1$. A probability of 1 (the highest possible probability) has a logarithm of 0. Lower probabilities have negative logarithms.\n",
+        "3.\tThe entropy is the negative of the sum of each probability times its base-2 logarithm. For a coin toss, this is $E = -(P_H\\log_2P_H + P_T\\log_2P_T) = -(0.5\\times -1 + 0.5 \\times -1) = 1$.\n",
+        "4.\tTo calculate the overall entropy when we split the examples into two groups, we must add up the entropy for each group multiplied by the probability that an example falls into the group.\n",
         "\n",
-        "If we split the Walk examples according to Time, there are 6/9 examples in the Yes group with entropy $E_{Yes}=0.92$, and 3/9 examples in the No group with $E_{No}=0$. So the total entropy is $E=(6/9).92+(3/9)0=.613$. This is substantially lower than the entropy of a coin toss. This means that if we split according to Time, the decision will be substantially more certain than the outcome of a coin toss.   \n",
+        "If we split the Walk examples according to Time, there are 6/9 examples in the Yes group with entropy $E_{Yes}=0.92$, and 3/9 examples in the No group with $E_{No}=0$. So the total entropy is $E=(6/9).92+(3/9)0=.61$. This is substantially lower than the entropy of a coin toss. This means that if we split according to Time, the decision will be substantially more certain than the outcome of a coin toss.   \n",
         "\n",
         "The code below calculates this result. If you like, you can change the numbers to see how they affect the entropy.  "
       ],
@@ -54,8 +54,8 @@
         "import numpy as np\n",
         "\n",
         "def entropy(probabilities):\n",
-        "  \"\"\"    \n",
-        "  :param probabilities: list of probabilities of each possible outcome \n",
+        "  \"\"\"\n",
+        "  :param probabilities: list of probabilities of each possible outcome\n",
         "  :return: entropy of the outcome\n",
         "  \"\"\"\n",
         "  probabilities = np.array(probabilities) / np.sum(probabilities) # make sure probabilities sum to one\n",
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "BVuTwK6KhRz6"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
