--- a/finding_the_gradient.ipynb
+++ b/finding_the_gradient.ipynb
@@ -18,9 +18,9 @@
       },
       "source": [
         "##Introduction\n",
-        "Training a neural network requires calculating the gradient of the loss with respect to the network's learnable parameters.\n",
+        "Training a neural network requires calculating the gradient of the loss with respect to the network's learnable parameters, which include the weights and biases.\n",
         "\n",
-        "The gradient is calculated with the backpropagation algorithm, which is essentially the chain rule of calculus. The chain rule is applicable because neural networks involve functions of functions of functions. For example, the output of a neuron in the first layer is a function of the network's inputs, the output of a neuron in the second layer is a function of outputs of the first layer, and so on.\n",
+        "The gradient is calculated with the famous backpropagation algorithm. Backpropagation is essentially an efficient way to use the chain rule of calculus. The chain rule is applicable because neural networks involve functions of functions of functions. For example, the output of a neuron in the first layer is a function of the network's inputs, the output of a neuron in the second layer is a function of outputs of the first layer, and so on.\n",
         "\n",
         "##The Chain Rule\n",
         "Recall from calculus that for a function $h(x) = g_2(g_1(x))$,\n",
@@ -34,9 +34,11 @@
         "This approach also extends to compositions of more than two functions.\n",
         "\n",
         "##The Idea of Backpropagation\n",
-        "The key idea of backpropagation is to re-use intermediate calculations that are needed for multiple derivatives (i.e. derivatives of the loss with respect to multiple network parameters). In a large network, this is much more efficient than using the chain rule independently for each parameter.\n",
+        "The key idea of backpropagation is to re-use intermediate calculations that are needed for multiple derivatives (i.e. derivatives of the loss with respect to multiple network parameters). This is much more efficient than using the chain rule independently for each parameter.\n",
         "\n",
-        "The diagram below shows a simple network with inputs $x_1$ and $x_2$, hidden-neuron outputs $h_1$ and $h_2$, output neurons $\\hat{y}$, and loss $L$. The diagram also shows the derivatives of the loss with respect to two of the network's weights, $w^h_{11}$ and $w^h_{12}$. In these expressions, $g$ refers to a neuron's nonlinearity, which may be the ReLU function for example. These derivatives can be calculated with the chain rule. However, notice that the first three terms in these two derivatives are identical. The shared terms only need to be calculated once, and the result multiplied by each of the final terms (which differ).\n",
+        "The diagram below shows a simple network with inputs $x_1$ and $x_2$, hidden-neuron outputs $h_1$ and $h_2$, output neurons $\\hat{y}$, and loss $L$. The diagram also shows the derivatives of the loss with respect to two of the network's weights, $w^h_{11}$ and $w^h_{12}$. In these expressions, $g$ refers to a neuron's nonlinearity, which may be the ReLU function for example.\n",
+        "\n",
+        "These derivatives can be calculated with the chain rule. However, notice that the first three terms in these two derivatives are identical. The shared terms only need to be calculated once, and the result multiplied by each of the final terms (which differ).\n",
         "\n",
         "<img src='https://github.com/bptripp/ai-course/blob/main/simple-network-derivatives.png?raw=true' width=500>\n",
         "\n",
@@ -45,14 +47,14 @@
         "##Forward and Backward Pass\n",
         "The derivative of a nonlinear function depends on the function's argument(s). For example, the derivative of the ReLU function is one if the input is greater than zero, but it is zero if the input is less than zero.\n",
         "\n",
-        "Because the derivative terms depend on their arguments, the first step is to propagate an input through the network, so that the inputs to all the nonlinear functions take on the right values. This is called \"forward propagation\". Then the derivatives are propagated backward, which is called \"backpropagation\". In a neural network, forward and backpropagation involve similar equations. For example, forward propagation involves weighted sums of neurons' outputs, while backpropagation involves weighted sums of derivative terms, provided some of the neurons send their outputs to multiple targrets.\n",
+        "Because the derivative terms depend on their arguments, the first step is to propagate an input through the network, so that the inputs to all the nonlinear functions take on the right values. This is called \"forward propagation\". Then the derivatives are propagated backward, which is called \"backpropagation\". In a neural network, forward and backpropagation involve similar equations. For example, forward propagation involves weighted sums of neurons' outputs, while backpropagation involves weighted sums of derivative terms (for neurons that send their outputs to multiple targrets).\n",
         "\n",
         "A practical consideration that affects larger networks is that the neurons' activations can't be discarded from memory once the network's output has been calculated. The must be kept until they are used to calculate the required derivatives.\n",
         "\n",
         "##Automatic Differentiation\n",
-        "Deep learning software mostly takes care of these details mostly automatically. The software implementations of any mathematical expressions in a deep learning package have extra machinery for receiving and passing on derivative terms appropriately.\n",
+        "Deep learning software takes care of these details automatically. The software implementations of any mathematical expressions in a deep learning package have extra machinery for receiving and passing on derivative terms appropriately.\n",
         "\n",
-        "Below is an example of how this works in the PyTorch deep-learning package. PyTorch calls variables \"tensors\". This machinery is active for tensors that have a property called \"requires_grad\" set to True. The code below creates variables, $a=2$, $b=0$, and $c=(a-b)^2$. The derivative of $c$ with respect to $a$ and $b$ is then calculated by calling the method, c.backward()."
+        "Below is an example of how this works in the PyTorch deep-learning package. PyTorch calls variables \"tensors\". This machinery is active for tensors that have a property called \"requires_grad\" set to True. To illustrate, the code below creates variables, $a=2$, $b=0$, and $c=(a-b)^2$. The derivative of $c$ with respect to $a$ and $b$ is then calculated by calling the method, c.backward(). To run this code, hover over the code until the play button appears (a circle with a triangle inside) and then press the button. It will take a few seconds to import the \"torch\" library but the rest of the code runs very quickly."
       ]
     },
     {
@@ -68,13 +70,13 @@
       ],
       "metadata": {
         "id": "wj7kWOLObUQK",
-        "outputId": "11814924-2de6-4abb-c63e-c2ab98be4d76",
+        "outputId": "5fa323a0-2eaa-4987-f46c-d904341f009f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "wj7kWOLObUQK",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
