--- a/optional_python_material.ipynb
+++ b/optional_python_material.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMaXJemC8ps8mPBaoeYVFU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,13 +48,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jD5yhlh7t-6v",
-        "outputId": "6c2e6f3c-017c-4c0b-f5c7-b5bcbcc5dc4d"
+        "outputId": "2347a01d-95b0-4c62-84e3-26f4de5790fb"
       },
       "outputs": [
         {
@@ -79,10 +78,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# How to See The Values of Variables\n",
+        "# Formatting Output\n",
         "As we have already seen, you can show the values of variables using the \"print\" function. It is often useful to print messages that have multiple values, and Python has a syntax that lets you do that with a lot of flexibility. An example is shown below.\n",
         "\n",
-        "You can exert a lot of control over the formatting by adding specifications inside the curly braces (see https://docs.python.org/3.4/library/string.html#formatspec)."
+        "You can exert a lot of control over the formatting by adding formatting specifications inside the curly braces (see https://docs.python.org/3.4/library/string.html#formatspec)."
       ],
       "metadata": {
         "id": "RTAtjgkXxQbA"
@@ -116,10 +115,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's dissect that last line a little bit. We are calling a built-in function called \"print\". The print function requires an \"argument\" (a parameter), which carries the value that will be printed. Inside the brackets, we have a string, 'First {} then {}'. However, Python does not pass that string to the print function. Each string in Python has a special kind of function associated with it, which is called \"format\". If you write a string, then a dot, then \"format\", Python calls that particular string's format function. The format function also has arguments, which are values to incorporate into the string. The format function produces a new string, which is similar to the original, but with the {} parts replaced with the arguments to the format function. It is that new string that is passed to the print function.\n",
+        "Let's dissect that last line. We are calling the built-in function, \"print\". The print function requires an \"argument\" (a parameter), which carries the value that will be printed. The argument is inside the brackets. It is a string, 'First {} then {}'. Python does not pass that string to the print function directly. Each string in Python has a special kind of function associated with it, which is called \"format\". If you write a string, then a dot, then \"format\", Python calls that particular string's format function. The format function also has arguments, which are values to incorporate into the string. The format function produces a new string, which is similar to the original, but with the {} parts replaced with the arguments to the format function. It is that new string that is passed to the print function.\n",
         "\n",
         "# Loops and Conditionals\n",
-        "We often need a computer to do the same thing over and over again, perhaps using different values each time. Computers excel at this. To program this repetitive behaviour, you must use a \"loop\". There are different varieties of loop, but the most common is called a \"for loop\". Try running the for loop below."
+        "We often need a computer to do the same thing over and over again, perhaps using different values each time. To program this repetitive behaviour, you must use a \"loop\". There are different varieties of loop, but the most common is called a \"for loop\". Try running the for loop below."
       ],
       "metadata": {
         "id": "cADZrSV1yOOg"
@@ -129,28 +128,24 @@
       "cell_type": "code",
       "source": [
         "for letter in ('a', 'b', 'c'):\n",
-        "  print(letter)\n",
-        "  print('hello')"
+        "  print(letter)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rjnvqJc7zKvs",
-        "outputId": "74302291-e2ec-4ff2-ee8b-ba60e259936f"
+        "outputId": "533d070d-ed14-46ee-89f8-9df6780fbc0f"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "a\n",
-            "hello\n",
             "b\n",
-            "hello\n",
-            "c\n",
-            "hello\n"
+            "c\n"
           ]
         }
       ]
@@ -158,7 +153,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Try adding something, such as 'd', to the things that are printed, and run it again. Similar to functions, any code that is indented following the \"for ...\" line of code is considered part of the loop. Try adding another indended line, \"print('hello'), after \"print(letter). Use your \\<tab> key to create the indendation. It is important to make the indendation the same for each line in the loop. Any following lines that are not indented will not be part of the loop. Here is an example."
+        "Try adding something, such as 'd', to the list of things that are printed, and run it again. Similar to functions, any code that is indented following the \"for ...\" line of code is considered part of the loop. Try adding another indended line, \"print('hello'), after \"print(letter). Use your \\<tab> key to create the indendation. It is important to make the indendation the same for each line in the loop. Any following lines that are not indented will not be part of the loop. Here is an example."
       ],
       "metadata": {
         "id": "blfKEyYX1Nvb"
@@ -199,7 +194,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's make things fancy by combining string formatting, loops, and arithmetic."
+        "Here is another example that combines string formatting, loops, and arithmetic."
       ],
       "metadata": {
         "id": "9TNcfcAB2bRD"
@@ -243,9 +238,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "There we used another built-in function, \"range\", which produces a series of integers from zero to one less than the argument. Why one less? There is a rationale, but more importantly, it was a human decision that made sense to the designers of the function (who were very experienced programmers). Language design decisions a bit like rules of a sport. When you are starting out, just accept them and they will become intuitive soon enough.\n",
+        "This code uses another built-in function, \"range\", which produces a series of integers from zero to one less than the argument. Why one less? There is a good rationale, but more importantly, it was a human decision that made sense to the designers of the function, who were experienced programmers. Language design decisions are a bit like rules of a sport. When you are starting out, just accept them and they will become intuitive soon enough.\n",
         "\n",
-        "Sometimes, we need a program to do one thing or another, depending on the value of a variable. This is accomplished with conditional statements. Let's see an example."
+        "Sometimes, you will need a program to do either one thing or another, depending on the value of a variable. This is accomplished with conditional statements. Let's see an example."
       ],
       "metadata": {
         "id": "8jubhHI33G3O"
@@ -269,7 +264,7 @@
         "id": "UbkRmU0q7rAc",
         "outputId": "1c715f65-89df-4bf7-9dee-79b2df8a58c5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +278,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Experiment with changing the value of x. Let's also consider a few details of syntax in this code. First, notice that we use indentation to associate lines of code with each condition. This is consistent with the syntax of loops and functions. Second, notice the keywords \"if\", \"elif\", and \"else\". If the condition beside the \"if\" holds, then the indented line after it runs, and that's that. If not, the condition beside the \"elif\" is checked and if it holds then the associated indented code runs. If neither of those conditions holds, then the code under the \"else\" runs. Finally, notice the double-equals sign, \"==\". That is an operation that checks whether the things on each side are the same and produces a boolean \"True\" value if they are, or \"False\" otherwise. In contrast, the single \"=\" assigns the value on the left to the variable on the right, which is not what we want here.\n",
+        "Experiment with changing the value of x. Let's also consider a few details of syntax in this code. First, notice that it uses indentation to associate lines of code with each condition. This is consistent with the syntax of loops and functions. Second, notice the keywords \"if\", \"elif\", and \"else\". If the condition beside the \"if\" holds, then the indented line after it runs, and that's that. If not, the condition beside the \"elif\" is checked and if it holds then the associated indented code runs. If neither of those conditions holds, then the code under the \"else\" runs. Finally, notice the double-equals sign, \"==\". That is an operation that checks whether the things on each side are the same and produces a boolean \"True\" value if they are, or \"False\" otherwise. In contrast, the single \"=\" assigns the value on the left to the variable on the right, which is not what we want here.\n",
         "\n",
         "You can have multiple \"elif\" conditions, or none. You can also omit the \"else\" part. The examples below illustrate this."
       ],
